[package]
name = "blvflag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
similar = "2.2"
ollama-rs = { version = "0.1", features = ["stream"] }
tokio = { version = "1.12", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }  
regex = "1.5.4"
indicatif = "0.17"
directories = "5.0"
chrono = "0.4"
time = "0.3"
dirs-next = "2"
pyo3 = { version = "0.25.1", features = ["extension-module"] } 
